# WrenAI

./: .release-please-manifest.json  SECONDARY_DEV.md
.claude/: CLAUDE.md
.claude/plans/: mcp-server.md  multi-project-datasource-rest.md  qdrant-volc-embedding.md
.github/workflows/: sdk-datasource-ci.yml  sdk-mcp-ci.yml
core/wren/: CHANGELOG.md  pyproject.toml
core/wren-core-py/: CHANGELOG.md
core/wren/src/wren/memory/: embeddings.py  store.py
core/wren/src/wren/providers/: __init__.py  connection.py  exceptions.py  mdl_source.py  memory.py
core/wren/tests/unit/: test_providers.py
docs/core/get_started/quickstart-with-agent/: wren-mcp.md
sdk/wren-datasource/: README.md  pyproject.toml
sdk/wren-datasource/src/wren_datasource/: __init__.py  _app.py  _auth.py  _resolve.py  _store.py  server.py
sdk/wren-datasource/src/wren_datasource/api/: __init__.py  connection.py  profiles.py  projects.py
sdk/wren-datasource/tests/: conftest.py  test_api.py  test_store.py
sdk/wren-langchain/: CHANGELOG.md
sdk/wren-langchain/src/wren_langchain/: exceptions.py
sdk/wren-langchain/src/wren_langchain/_providers/: connection.py
sdk/wren-langchain/tests/: conftest.py
sdk/wren-langchain/tests/conformance/: test_langchain_contract.py
sdk/wren-langchain/tests/integration/: conftest.py
sdk/wren-langchain/tests/unit/: test_memory_api.py  test_prompt.py  test_providers_connection.py  test_providers_memory.py  test_toolkit_init.py  test_tools_memory.py
sdk/wren-mcp/: README.md  pyproject.toml
sdk/wren-mcp/src/wren_mcp/: __init__.py  _app.py  _auth.py  _bridge.py  _envelope.py  _format.py  _routing.py  _state.py  server.py
sdk/wren-mcp/src/wren_mcp/_tools/: __init__.py  ask_skills.py  context.py  cube.py  docs.py  genbi.py  memory.py  memory_extra.py  memory_mutate.py  profile.py  profile_mutate.py  query.py  types.py
sdk/wren-mcp/tests/: conftest.py  test_bridge.py  test_routing.py  test_server.py  test_tools.py
sdk/wren-pydantic/: CHANGELOG.md
sdk/wren-pydantic/src/wren_pydantic/: exceptions.py
sdk/wren-pydantic/src/wren_pydantic/_providers/: connection.py  mdl_source.py  memory.py
sdk/wren-pydantic/tests/: conftest.py
sdk/wren-pydantic/tests/conformance/: test_pydantic_ai_contract.py
sdk/wren-pydantic/tests/unit/: test_instructions.py  test_memory_api.py  test_providers_connection.py  test_providers_memory.py  test_toolkit_init.py
