[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wren-datasource"
version = "0.1.0"
description = "Datasource management REST service for Wren: project + profile + connection resolution, enabling wren-mcp to serve multiple projects from one process."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Wren AI", email = "contact@getwren.ai" }]
keywords = [
  "wrenai", "wren", "datasource", "profile", "connection", "rest",
  "semantic-layer", "mdl", "multi-project",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Database",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  # Core: profile secrets + providers trio (ProjectMDLSource) + DataSource enum.
  "wrenai>=0.12.0",
  # REST stack (FastAPI bundles Starlette + Pydantic).
  "fastapi>=0.110",
  "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
]

[project.scripts]
wren-datasource = "wren_datasource.server:main"

[project.urls]
Homepage = "https://getwren.ai"
Repository = "https://github.com/Canner/WrenAI"
Issues = "https://github.com/Canner/WrenAI/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/wren_datasource"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "PLC"]
# PLC0415: lazy imports keep server startup cheap and mirror the wren-mcp pattern.
ignore = ["E501", "PLC0415"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
