[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wren-mcp"
version = "0.1.0"
description = "MCP (Model Context Protocol) server exposing the Wren semantic SQL engine to AI agents over streamable-http."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Wren AI", email = "contact@getwren.ai" }]
keywords = [
  "wrenai", "wren", "mcp", "model-context-protocol", "sql",
  "semantic-layer", "mdl", "ai-agent", "data-modeling", "analytics",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Database",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  # Core engine: WrenEngine, shared providers trio, memory, context, profile.
  "wrenai>=0.12.0",
  # MCP SDK (FastMCP): streamable-http server + @mcp.tool registration.
  "mcp>=1.2",
  # ASGI stack for the streamable-http transport + bearer-token middleware.
  "starlette>=0.37",
  "uvicorn>=0.29",
  # async<->sync bridging around the blocking engine/connector/memory calls.
  "anyio>=4",
  # HTTP client for the wren-datasource REST service (multi-project mode).
  "httpx>=0.27",
]

[project.optional-dependencies]
# Memory tools (wren_fetch_context / wren_recall_queries / wren_store_query)
# require the Qdrant + Volcengine Ark embedding deps via wrenai. Without this,
# the server auto-drops the memory tools and exposes only the runtime/context
# tools - same graceful-degradation behavior as the wren-langchain SDK.
memory = ["wrenai[memory]>=0.12.0"]

# Dev / test deps.
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "wrenai[memory]>=0.12.0",
]

[project.scripts]
wren-mcp = "wren_mcp.server:main"

[project.urls]
Homepage = "https://getwren.ai"
Repository = "https://github.com/Canner/WrenAI"
Issues = "https://github.com/Canner/WrenAI/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/wren_mcp"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "PLC"]
# PLC0415: tool closures lazy-import core modules (wren.context, wren.profile,
# wren_core, ...) so server startup doesn't pay for modules a given tool tier
# never touches. Mirrors the SDK's lazy-import pattern.
ignore = ["E501", "PLC0415"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
